[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/visuals/icon.png" type="Texture" id=1]
[ext_resource path="res://resources/themes/dialog_theme_a.tres" type="Theme" id=2]
[ext_resource path="res://scenes/game/dialog_layer/dialog_layer.gd" type="Script" id=3]

[node name="DialogLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Fullscreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="DialogContainer" type="MarginContainer" parent="Fullscreen"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -264.0
custom_constants/margin_right = 100
custom_constants/margin_top = 20
custom_constants/margin_left = 100
custom_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="Fullscreen/DialogContainer"]
margin_left = 100.0
margin_top = 20.0
margin_right = 924.0
margin_bottom = 224.0

[node name="HBoxContainer" type="HBoxContainer" parent="Fullscreen/DialogContainer"]
margin_left = 100.0
margin_top = 20.0
margin_right = 924.0
margin_bottom = 224.0

[node name="MarginContainer2" type="MarginContainer" parent="Fullscreen/DialogContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 204.0
rect_min_size = Vector2( 200, 200 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="IconTexture" type="TextureRect" parent="Fullscreen/DialogContainer/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 194.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Fullscreen/DialogContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 824.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 20
custom_constants/margin_bottom = 30

[node name="DialogLabel" type="Label" parent="Fullscreen/DialogContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 30.0
margin_right = 600.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "HERE IS THE DIALOG IS SHORT AND SWEET!"

[node name="NextIcon" type="TextureRect" parent="Fullscreen"]
unique_name_in_owner = true
margin_left = 848.0
margin_top = 496.0
margin_right = 904.0
margin_bottom = 546.0
texture = ExtResource( 1 )
expand = true
